[gd_scene load_steps=2 format=3 uid="uid://dhfulu7lit53c"]

[ext_resource type="Script" uid="uid://brurqsvhd0675" path="res://Scripts/Display/preview_display.gd" id="1_8bwcm"]

[node name="PreviewDisplay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8bwcm")

[node name="TopLabel" type="Label" parent="."]
layout_mode = 2
text = "Select an item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnView" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
scroll_following = true

[node name="ItemView" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="BottomLabel" type="Label" parent="."]
layout_mode = 2
text = "for purchase"
horizontal_alignment = 1
vertical_alignment = 1
